--- a/book/book_0132.md
+++ b/book/book_0132.md
@@ -58,8 +58,8 @@
 - 사람들은 나이가 들수록 소비라는 행위에서 즐거움을 잘 못 느낀다
 
 047 MZ세대는 인터넷과 스마트폰에 익숙하고 SNS로 다양한 정보와 의견을 공유하며 개인주의적이고 자기표현을 중시하는 특징이 있다 
-- 유연하고 참의적으로 생각하고 행동한다
-- 새로운 트랜드를 빨리 받아들이고 남과 다른 이색적인 경험을 추구하면, 유통시장에서 강력한 영향력을 발휘하는 소비주체
+- 유연하고 창의적으로 생각하고 행동한다
+- 새로운 트랜드를 빨리 받아들이고 남과 다른 이색적인 경험을 추구하며, 유통시장에서 강력한 영향력을 발휘하는 소비주체
 - 상품 소유에 집착하지 않는 세대 -> 실물상품 소비 축소, 가상공간 소비 선호
 - 기성세대와 달리 개인의 삶이 월급보다 중요하다
 
@@ -100,9 +100,9 @@
 
 091 시장의 미래는 누구도 예측할 수 없다 (Random Walk)
 
-092 단기 주가를 예측하려는 것은 처음부터 없는 답을 쫗는 것과 같다 (사업성분석이 중심이 되어야 한다)
+092 단기 주가를 예측하려는 것은 처음부터 없는 답을 쫓는 것과 같다 (사업성분석이 중심이 되어야 한다)
 
-092 사업을 정확하게 판단하는 것과 동시에 무섭계 확산하는 시장 심리에 휩쓸리지 않을 때 성공할 것이다 (워렌 버핏)
+092 사업을 정확하게 판단하는 것과 동시에 무섭게 확산하는 시장 심리에 휩쓸리지 않을 때 성공할 것이다 (워렌 버핏)
 
 093 가치에 대한 확고한 신념이 있어야만 수익이 발생하지 않는 기간을 버텨낼 수 있다
 
@@ -116,7 +116,7 @@
 
 099 PBR = ROE * PER,  (시가총액/자기자본 = 당기순이익/자기자본 * 시가총액/당기순이익)
 
-104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행하는 사업을 하는 기업일 수 있음을 체크해야 한다
+104 주식이 **저평가된 원인**을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행하는 사업을 하는 기업일 수 있음을 체크해야 한다
 
 105 PER 30배 이하, PBR 5배수 아래인 종목은 저평가 가능성이 있음
 
@@ -141,7 +141,7 @@
 
 ## **03. 50년 경제주기와 기술혁신주기의 커플링**
 
-137 콘트라티예프파동 : 50년 경제주기 : 호황-거품-침체-불황-바닥-회복
+137 **콘트라티예프파동** : 50년 경제주기 : **호황-거품-침체-불황-바닥-회복**
 
 141 투자란 그 국가 운명에 대한 베팅 (GDP의 장기 성장 여부 중요)
 
@@ -197,11 +197,11 @@
 
 201 마오쩌둥(공부론)
 - 1949년 내전 승리
-- 호루시초크 미국과 우호적 관계 맺으러 함. 자력갱생 전략을 앞세워 대약진 운동 전개. 대실패
+- 호루시초프 미국과 우호적 관계 맺으러 함. 자력갱생 전략을 앞세워 대약진 운동 전개. 대실패
 - 문화대혁명도 중국경제에 악영향
 
 201 덩샤오핑(선부론)
-- 겨핵과 개방(1978). 흑묘백묘론
+- 개혁과 개방(1978). 흑묘백묘론
 - 이념적인 논쟁은 시기를 놓칠 수 있다
 - 인민공사체재 생산성 그대로. 농촌단위 도급제 10~20%. 농가단위 도급제 30~50% 생산성 증가
 
@@ -211,7 +211,7 @@
 - 지역간. 소득계급 간 빈부격차 줄이는 것
 - 파이 나누기도 함께 진행한다는 점
 
-210 연소득 2만5천 이상이 1억명 이상 vs 월소득 1천위안(17만원) 이하 6억명
+210 연소득 2만5천 이상이 1억명 이상 vs **월소득 1천위안(17만원) 이하 6억명**
 
 211 자산가격거품 : 10년 이상의 노동의 결실은 소수의 주머니로 들어가고 대부분의 국민들은 10년의 소비력을 잃는다
 
@@ -234,7 +234,7 @@
 
 227 부채율은 전반적으로 건실하지만 자산의 유동성이 떨어지는 등 유동성 리스크가 어느 정도 있다
 
-230 기관 투자자의 낲은 참여도는 중국 주식시장이 개미투자자 시장과 정책시의 악성 순환이 이어지도록 한다
+230 **기관 투자자의 낮은 참여도**는 중국 주식시장이 개미투자자 시장과 **정책시**의 악성 순환이 이어지도록 한다
 
 231 시진핑의 3연임. 중국식 현대화 건설 (5가지)
 - 거대한 인구 규모의 현대화 : 14억명. 선진국 발전 경로를 적용하기 힘듦. 노동력과 내수시장 쌍순환
@@ -248,7 +248,7 @@
 
 240 무역확장법 (1962) : 다른 나라와 대규모 관세 인하를 협정할 수 있는 기초 제시 (케네디 라운드)
 
-242 미국, 독일, 일본 중심 (1995)  vs  아시아 지역은 중국으로 대체 (2014)
+242 미국, 독일, **일본** 중심 (1995)  vs  아시아 지역은 **중국**으로 대체 (2014)
 
 247 31개 성 : 당서기, 성장  vs  시진핑 총서기와 총리
 
@@ -267,3 +267,136 @@
 266 2016 공급측 개혁 실시
 
 268 자본시장에서 기업들이 충분한 자금을 조달할 수 있도록 규제를 완화하고 중국 주민들의 자본시장 투자도 활성화하는 방향으로 리스크를 분산하는 것이다
+
+<br>
+
+
+## **05. 미중 갈등 시대, 투자 방향 찾기**
+
+278 나의 이익을 챙기는 동시에 상대의 약점을 눈감아주는 양국의 밀월 관계가 10년 넘게 이어졌다
+- 기축통화국 미국은 필요할 때마다 달러를 발행해서 중국의 물건을 샀고, 중국은 물건을 제공한 대가로 받은 달러로 미국의 채권은 꾸준히 사들였다
+
+279 미국은 대만 문제와 중국 내부의 인권 문제까지 공론화하여 갈등을 키우고 있고, 중국은 미국채 매입 중단과 위안화 결제 등 통화 전쟁을 마다하지 않으면서 응수하고 있다
+
+279 오랜 시간 단단하게 구축된 미국, 중국 중심의 벨류체인이 한순간에 와해될거라고 보는 시각은 드물다
+
+282 중국의 개혁개방이 자유민주주의의 체재로의 변화를 이끌 것으로 기대했지만, 중국식 현대화 발전 경로를 강조함
+
+284 중국은 첨단기술 44개 중 37개 분야의 연구개발을 선도하여 미국보다 영향력이 큰 것으로 나타났다 (국방, 우주, 로봇, 에너지, 환경, 생명공은 중국보다 우세, 고성능컴퓨팅, 양자컴퓨팅, 백신은 선두)
+
+292 (미국 위주 동맹) 동맹을 한다고해서 첨당산업 시장이 넓어지는게 아니다 (오히려 시장경쟁이 치열해질 듯)
+
+292 최근 10년간 미국의 주요 연구개발 인력은 한국인, 중국인, 인도인들로 채워졌음 (세계화를 통한 인재 영입)
+
+295 중국은 인구가 14억명에 달하는 방대한 내수시장이 있어 규모의 경제와 신기술의 신속한 상용화가 가능한 국가다
+
+298 중국은 미국과의 협상에 대한 환상을 버리고 자주적인 성장 능력을 높이는 방향으로 장기적 대응에 나선 것이다
+
+303 응용과학이 강점인 한국은 메모리와 파운드리 분야가 앞서 있고, 일본은 탄탄한 기초과학과 장인정신이 강점이 되어 반도체 소재 영역에서 압도적인 자리를 차지한다. 미국은 기계공학에 강점이 있어 반도체 장비 분야에서 우세하다 (중국은 기초과학과 기계공학 : 반도체 소재와 장비 분야에 집중 투자)
+
+305 과창판은 혁신기업, 신기술기업, 첨단기업 특히 반도체 기업이 필요할 때 바로 상장할 수 있는 녹색통로다
+
+306 어느 한 기업도 모든 공급라인을 가져갈 수 없다. 인텔이 모바일 생태계에서 뒤진 것이 이를 잘 증명한다. 삼성전자도 인텔처럼 설계와 제조를 자급자족하는 모델을 택했는데, 향후 어려운 상황과 마주할 수 있을 듯해 걱정이 앞선다
+
+310 미중수교 당시 인정했던 유일한 합법정부 원칙을 무너뜨릴 정도의 매우 강력한 도발임 (펠로시 의장의 대만 방문)
+
+312 중국은 그간 미국이 패권 싸움을 벌인 영국, 독일, 일본과 차원이 달랐다. 이들 나라는 기술력은 좋았지만 내수시장이 작다는 것이 한계였다
+
+319 미국이 동맹국들과 연대해 중국에 전면적인 경제 디커플링을 실시하고, 외교 관계 단절을 포함한 본격적인 냉전을 시작할 뿐만 아니라 **국지전까지 감행하는 극단적인 상황**이 연출될 경우 상호간의 지불결재시스템은 중단될 것이다
+
+320 중국의 대책 : 국제시장과연 연결성 확대 / 위안화 자산 투자 수익률 확대 / 위안화 결재 장려
+
+326 중국 증시는 단기적으로 등락을 거듭하겠지만 장기적으로 볼 때 규모는 아주 커질 전망이다 (상업은행 중심에서 금융시장 주도 금융 체재로 전화중, 현재 외국자본 비중은 1% 수준)
+
+333 공급망 안전이 국가의 안보 개념으로 들어오면 세계 각국과 자국 내 산업 생태계 구축을 중심으로 세계경제 질서를 새롭게 만들어가는 중이다
+
+334 (베트남) 생산 가능 인구 비율이 증가하면서 경제 성장률이 높아지는 인구 배당 효과
+
+336 베트남으로의 산업 이전은 확실히 중국의 수출제품을 일부 대체했지만 기본적으로 가구, 타이어 등 기술 함량이 낮은 제품들이다
+
+339 로봇이 여러 영역에서 노동력 대체가 가능해지면서 이제는 자본이 있는 선진국도 제조업을 할 수 있는 시대가 열렸다
+
+345 미국 주요 공과 대학들도 중국 유학생을 거의 받아주지 않는 분위기 (장기적으로 볼 때 실수가 될 확률이 높아 보인다)
+
+347 원하든 원치 않았든 간에 지난 20년간 구축된 세계 경제 시스템은 미국과 중국을 중심으로 돌아가는 구조였다. 미국만 바라보며 너무 의존해도 안 되고, 중국을 외면하며 밀어내도 안 된다
+
+350 PM형 인재가 되어야 한다 / AI가 할 수 억는 일을 하고 그런 직업을 가져야 나의 가치가 훼손되지 않는다
+
+350 퍼스트무버가 되어야 하는 한국으로서는 그 역할이 익숙하지 않다. 퍼스트무버로서의 전략적 사고방식도 준비되어 있지 않다
+
+351 아무리 싼 물건이라도 서비스 개념을 업으면 부르는 값이 가격이 된다
+
+<br>
+
+
+## **06. 시대적 흐름, 미래의 방향과 우리의 준비**
+
+371 세상의 스토리가 변하면 생각도 방법도 새 스토리에 맞게 달라져야 한다
+
+373 여섯번째 기술 산업이 막 시작되어 정점에 가기 전인 바로 지금이야말로 AI, IoT, MoT, 로봇, 드론 같은 디지털화와 친환경 기술에 주목하고 투자해야 하는 적기라는 것이다
+
+374 큰 시대흐름을 파악해야 투자 대상의 유효 기간이 길지 짧을지 예측할 수 있고 투자를 할지말지 알 수 있다
+
+376 오늘날 덩치가 큰 빅테크 기업들은 특정 물건을 생산하지 않는다. 한번 플랫폼을 구축하면 무한대로 공급 가능하고 사용자만 늘면 되는 구조다
+
+377 애플 모바일폰 포화, 비전프로로 새로운 시장 개척중이다
+
+378 구독 서비스를 도입함으로써 차값 이외에 기대할 수 있는 또 다른 수익의 길이 열린 것이다
+
+380 유럽은 탄소국경조정제도(CBAM) 도입을 예고했다. (운송분야 온실가스 배출이 25%)
+
+381 글로벌 자동차 산업의 4가지 패러다임 : 모빌리티 / 자율주행 및 스마트화 / 신재생 에너지 / 전기자동차
+
+387 한마디로 기후변화에 대응하는 국제 사회의 노력이 많이 부족하다
+
+387 정상들간의 협약도 중요하지만 시민의식이 더 중요하다
+- 중국 마이썬린 : 엔트그룹 공익게임 (절약한 것으로 실제 나무 심음, 5억5천명(평균 28세))
+
+390 2022년 테라/루나사태, FTX파산 : 크립토 윈터
+
+393 비트코인은 블록체인 개념을 성공적으로 응용한 한 가지 사례에 불과하다
+
+394 블록체인은 분산된 장부로 투명하게 거래하고 이를 바탕으로 시스템이 유지된다
+
+395 필자는 미래 시가총액 1등 기업은 바로 사람 간의 신용 문제를 해결해주는 기업이 될 것으로 확신한다
+
+396 애플에서 개인 정보 제공 정책을 보수적으로 바꾸면서 메타 주가는 우려스러울 정도로 하락했다 (맞춤형 광고 업체)
+- 리브라, 메타버스 금융 : 금융당국의 제지 받음 (달러 패권 위협, 30억명 사용자)
+
+397 가상세계 내에서 경제활동이 이루어진다. 결재는 어떻게 할 것인가?
+
+398 정부와 기업들은 디지털 신분이 없으므로 참여할 수 없다. 정부 혁신은 여기에서부터 시작해야 한다
+
+398 (비트코인) 이 공간에서는 현실 세계의 신용이 문제가 되지 않고 제약도 없다 / 블록체인은 현실 세계의 신용을 온라인 세계에서 구현하고 현실 세계에서 발생했던 신용 문제를 해결했다는 데 의의가 있다
+
+399 부동산등기부 등본은 디지털 자산 증명서로 대체되어 한다. A의 것이라고 인증하는 기술이 바로 NFT 디지털 자산 증명서가 된다
+
+400 중앙의 신용 보증 역할이 없기에 (부동산 거래가 되면 모든 블록체인 참여가가 알게됨)
+
+403 메타버스의 본질은 집단지혜 혹은 군집지혜 : 독일에서도 K자동차 직원이 되어 한국에 오지 않고 메타버스에서 일할 수 있는 시대
+
+404 메타버스 안에서는 국가, 민족, 성별, 나이 제한이 없다. 오로지 실력과 능력이 전부다
+
+405 메타버스 안에서 협업하는 비즈니스 모델, 이런 플랫폼을 만들어 실현하면 제2의 구글, 애플이 된다
+
+408 물질적 욕망의 경제 -> 도파민 경제
+
+412 제페토 안에서 친구를 만나 안부를 묻고, 선물도 주고받는 MZ세대는 현실 세계의 나만큼 가상 세계 속 아바타도 중요하다 / 실제 소유하고 있지 않지만 **실제 소유한 것과 같은 행복감**을 느끼는 것이다.
+
+416 자살을 방지하기 위해 특단의 초치를 생각한 끝에 "당신이 그동안 만든 데이터를 다 지우셨나요?"라는 문장을 만들어 자살이 많은 지역에 걸어둤다고 한다. (일본)
+
+417 외국계 온라인 결제 플랫폼 중 최초로 중국에 들어간 기업(페이팔, 중국 소비자 활동 수집)
+
+418 (자율주행차) 중국에 들어가 시뮬레이션을 거친 기계가 더 똑똑해지는 것이다
+
+420 사스(2003, 중국) : 매장 폐쇄, 온라인 판매 시작 (알리바바, 징둥닷컴)
+
+423 디지털화란 기업의 전체 운영이 온라인에서 이뤄지는 것을 의미한다. 특히 고객, 상품, 거래, 마케팅, 팀 운영 모든 일이 온라인으로 진행되어야 한다
+
+428 한국은 영토가 좁다. 디지털 세상은 국경 없는 국제시장이다. 제한된 영토로 수출과 수입 모두 해외 의존도가 높다
+
+430 메타버스 시대에서는 디바이스가 스마트폰에 국한되지 않는다. 자동차, 스마트워치, VR기기가 모두 메타버스 디바이스다 / 미래 4차 산업기술 영역에서는 후발주자다 / 글로벌 AI 인덱스 8등 / 인재수 OECD 최하위 수준
+
+432 중국은 정책문건을 발표해 데이터를 기술/노동/자본에 이은 제4의 생산요소로 규명 (디지털시장 구축, 디지털 보안산업 육성)
+
+434 데이터 구축은 정부나 기업이 주도하는 것도 중요하지만, 더 중요한 것이 있다. 바로 광범위한 대중의 참여와 이들이 보상받을 수 있는 경제 생태계의 마련이다
